# commit-critic

./: .gitignore  DESIGN.md  README.md  commit_critic.py  formatter.py  git_utils.py  llm_client.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_commit_critic.py  test_git_utils.py  test_llm_client.py
