[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-critic"
version = "0.1.0"
description = "AI-powered terminal tool for critiquing and writing Git commit messages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.0",
    "openai>=1.0.0",
]
authors = [
    { name = "Josimar" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
commit-critic = "commit_critic:main"

[tool.setuptools]
py-modules = [
    "commit_critic",
    "formatter",
    "git_utils",
    "llm_client",
    "prompts",
]
